# stochaskell

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  birats.ipynb  codegen.ipynb  docker-stack.yaml  dp.ipynb  gp-spectral.ipynb  gp.ipynb  gpc.ipynb  ihaskell-stack.yaml  linreg.ipynb  logreg.ipynb  mchb.ipynb  mh.ipynb  rj-coal.ipynb  rj.ipynb  solve.ipynb  stack.yaml  tom.ipynb  unfold.ipynb  vizIR.ipynb
.circleci/: config.yml
docs/: .gitignore  Makefile  bib.yaml  dblp-cite.html  dblp-cite.lua  dp.ipynb  index.html  index.md  refs.css  sgcp.tgz  wcite.json
docs/dblp/conf/icml/: PaigeW14.bib
docs/dblp/conf/uai/: GoodmanMRBT08.bib
docs/dblp/journals/corr/: MansinghkaSP14.bib
docs/dblp/journals/jmlr/: WingateSG11.bib
docs/doc/: Language-Church.html  Language-Edward.html  Language-Graphviz.html  Language-PyMC3.html  Language-Stan.html  Language-Stochaskell-Expression.html  Language-Stochaskell.html  doc-index-124.html  doc-index-33.html  doc-index-35.html  doc-index-36.html  doc-index-37.html  doc-index-38.html  doc-index-42.html  doc-index-43.html  doc-index-45.html  doc-index-46.html  doc-index-47.html  doc-index-58.html  doc-index-60.html  doc-index-61.html  doc-index-62.html  doc-index-63.html  doc-index-92.html  doc-index-94.html  doc-index-95.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-J.html  doc-index-K.html  doc-index-L.html  doc-index-M.html  (+15 more)
docs/poster/: beamercolorthemeuq.sty  beamerthemegemini.sty  coal1.hs  coal2.hs  coal3.hs  latexmkrc  poster.bib  poster.tex  solve.hs
docs/poster/images/: uq-logo-white.eps
docs/sgcp/: func1.m  func1.mat  func2.m  func2.mat  func3.m  func3.mat  gaussian.m  poisson_step.m  run_func1.m  run_func2.m  run_func3.m
hs/: Main.hs
hs/Data/: Expression.hs  Program.hs
hs/Data/Array/: Abstract.hs
stochaskell/: .dockerignore  .gitignore  Dockerfile  Makefile  boost  church.sh  eigen  package.yaml  shell.nix  stack.yaml  stochaskell.cabal
stochaskell/app/: Benchmark.hs  CP.hs  DP.hs  Main.hs  Poly.hs  RJ.hs  SGCP.hs  SSGCP.hs  package.yaml
stochaskell/app/autostat/: Main.hs
stochaskell/app/benchmark/: Main.hs
stochaskell/app/cp/: Main.hs
stochaskell/app/dp/: Main.hs
stochaskell/app/mgp/: Main.hs
stochaskell/app/poly/: Main.hs
stochaskell/app/rj/: Main.hs
stochaskell/app/sgcp/: Main.hs
stochaskell/app/ssgcp/: Main.hs
stochaskell/cache/cc/: .gitignore
stochaskell/data/: .gitignore  Makefile  covtype.py
stochaskell/edward/: Makefile  requirements.txt
stochaskell/edward/benchmark/: .gitignore  Makefile  bench_data.py  bench_edward.py  bench_hmc.py  bench_pymc3.py  bench_pystan.py  bench_tf.py  bench_theano.py  python  requirements.edward.txt  requirements.pymc3.txt  requirements.pystan.txt  requirements.sklearn.txt  requirements.tf.txt
stochaskell/pymc3/: requirements.txt
stochaskell/src/: Util.hs
stochaskell/src/Control/Monad/: Guard.hs
stochaskell/src/Data/: Expression.hs  Program.hs
stochaskell/src/Data/Array/: Abstract.hs
stochaskell/src/Data/Bool/: Num.hs
stochaskell/src/Data/Expression/: Case.hs  Const.hs  Eval.hs  Extract.hs  Unfold.hs
stochaskell/src/Data/Expression/Const/: IO.hs
stochaskell/src/Data/Random/Distribution/: Abstract.hs
stochaskell/src/Language/: CC.hs  Church.hs  Edward.hs  Graphviz.hs  PyMC3.hs  Stan.hs  Stochaskell.hs
stochaskell/src/Language/Stochaskell/: Expression.hs  Plot.hs  Prelude.hs
stochaskell/test/: Main.hs
