name:                stochaskell
version:             0.1.0.0
-- synopsis:            Initial project template from stack
-- description:         Please see README.md
-- homepage:            http://github.com/githubuser/stochaskell#readme
-- license:             TODO
-- license-file:        LICENSE
author:              David A Roberts
maintainer:          d@vidr.cc
copyright:           2015 David A Roberts
-- category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Control.Monad.Guard
                     , Data.Bool.Num
                     , Data.Expression
                     , Data.Program
                     , Data.Array.Abstract
                     , Data.Random.Distribution.Abstract
                     , Language.Stan
  build-depends:       Boolean
                     , base >= 4.7 && < 5
                     , bimap
                     , mtl
                     , process
                     , split
                     , temporary
  default-language:    Haskell2010

executable stochaskell-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       Boolean
                     , Chart
                     , Chart-cairo
                     , base
                     , stochaskell
  default-language:    Haskell2010

test-suite stochaskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , stochaskell
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

-- source-repository head
--   type:     git
--   location: https://github.com/githubuser/stochaskell
