name:                stochaskell
version:             0.1.0.0
-- synopsis:            Initial project template from stack
-- description:         Please see README.md
-- homepage:            http://github.com/githubuser/stochaskell#readme
-- license:             TODO
-- license-file:        LICENSE
author:              David A Roberts
maintainer:          d@vidr.cc
copyright:           2015 David A Roberts
-- category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Control.Monad.Guard
                     , Data.Expression
                     , Data.Expression.Const
                     , Data.Expression.Eval
                     , Data.Program
                     , Data.Array.Abstract
                     , Data.Random.Distribution.Abstract
                     , Language.Stan
                     , Language.Church
                     , Util
  build-depends:       Boolean
                     , array
                     , base >= 4.7 && < 5
                     , containers
                     , bimap
                     , bytestring
                     , cryptohash
                     , directory
                     , hmatrix
                     , logfloat
                     , math-functions
                     , mtl
                     , process
                     , random
                     , random-fu
                     , split
                     , temporary
  default-language:    Haskell2010

executable dp-exe
  hs-source-dirs:      app
  main-is:             DP.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       Boolean
                     , base
                     , logfloat
                     , stochaskell
  default-language:    Haskell2010

executable poly-exe
  hs-source-dirs:      app
  main-is:             Poly.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       Boolean
                     , Chart
                     , Chart-cairo
                     , base
                     , stochaskell
  default-language:    Haskell2010

executable sgcp-exe
  hs-source-dirs:      app
  main-is:             SGCP.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       Boolean
                     , Chart
                     , Chart-cairo
                     , base
                     , stochaskell
  default-language:    Haskell2010

test-suite stochaskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base
                     , HUnit
                     , logfloat
                     , stochaskell
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

-- source-repository head
--   type:     git
--   location: https://github.com/githubuser/stochaskell
