name:                stochaskell
version:             0.1.0.0
-- synopsis:            Initial project template from stack
-- description:         Please see README.md
-- homepage:            http://github.com/githubuser/stochaskell#readme
-- license:             TODO
-- license-file:        LICENSE
author:              David A Roberts
maintainer:          d@vidr.cc
copyright:           2015 David A Roberts
-- category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Control.Monad.Guard
                     , Data.Array.Abstract
                     , Data.Expression
                     , Data.Expression.Const
                     , Data.Expression.Const.IO
                     , Data.Expression.Eval
                     , Data.Program
                     , Data.Random.Distribution.Abstract
                     , Language.CC
                     , Language.Church
                     , Language.Edward
                     , Language.PyMC3
                     , Language.Stan
                     , Language.Stochaskell
                     , Util
  build-depends:       Boolean
                     , array
                     , base
                     , bimap
                     , binary
                     , bytestring
                     , containers
                     , cryptohash
                     , data-binary-ieee754
                     , directory
                     , extra
                     , hmatrix
                     , lazy-csv
                     , logfloat
                     , math-functions
                     , mtl
                     , process
                     , random
                     , random-fu
                     , split
                     , temporary
                     , terminal-progress-bar
  default-language:    Haskell2010

executable benchmark-exe
  hs-source-dirs:      app
  main-is:             Benchmark.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , stochaskell
                     , time
  default-language:    Haskell2010

executable dp-exe
  hs-source-dirs:      app
  main-is:             DP.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , stochaskell
  default-language:    Haskell2010

executable poly-exe
  hs-source-dirs:      app
  main-is:             Poly.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Chart
                     , Chart-cairo
                     , stochaskell
  default-language:    Haskell2010

executable sgcp-exe
  hs-source-dirs:      app
  main-is:             SGCP.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Chart
                     , Chart-cairo
                     , stochaskell
  default-language:    Haskell2010

test-suite stochaskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base
                     , HUnit
                     , logfloat
                     , stochaskell
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

-- source-repository head
--   type:     git
--   location: https://github.com/githubuser/stochaskell
